trimmed text & tooltips

--- a/WpfApp1/WpfApp1.csproj
+++ b/WpfApp1/WpfApp1.csproj
@@ -68,6 +68,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Converters\HeightToMarginConverter.cs" />
+    <Compile Include="Services\TextBlockService.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
     <Compile Include="ViewModels\OverlayItemViewModel.cs" />
     <Compile Include="ViewModels\OverlayViewModel.cs" />
